--- a/style.css
+++ b/style.css
@@ -1,43 +1,75 @@
+/* General styling */
 body {
     font-family: Arial, sans-serif;
-    line-height: 1.6;
     margin: 0;
     padding: 0;
+    background-color: #f4f4f9;
 }
 
-header {
-    background: #2a6a92;
+/* Navbar styling */
+.navbar {
+    background-color: #2a6a92;
     color: white;
-    padding: 1rem 0;
-    text-align: center;
+    overflow: hidden;
 }
 
-header nav ul {
+.navbar ul {
     list-style: none;
+    margin: 0;
     padding: 0;
+    display: flex;
 }
 
-header nav ul li {
-    display: inline;
-    margin: 0 1rem;
+.navbar li {
+    position: relative;
 }
 
-header nav ul li a {
+.navbar > ul > li {
+    padding: 15px 20px;
+}
+
+.navbar a {
     color: white;
     text-decoration: none;
+    display: block;
 }
 
-main {
-    padding: 2rem;
+.navbar li:hover {
+    background-color: #1b4f70;
 }
 
-section {
-    margin-bottom: 2rem;
+.navbar li ul {
+    display: none;
+    position: absolute;
+    background-color: #1b4f70;
+    top: 100%;
+    left: 0;
+    list-style: none;
+    padding: 0;
+    min-width: 200px;
+    z-index: 1000;
 }
 
-footer {
-    text-align: center;
-    background: #2a6a92;
-    color: white;
-    padding: 1rem 0;
+.navbar li:hover > ul {
+    display: block;
+}
+
+.navbar li ul li {
+    padding: 10px;
+}
+
+.navbar li ul li a:hover {
+    background-color: #14506a;
+}
+
+.navbar li ul li ul {
+    top: 0;
+    left: 100%;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .navbar ul {
+        flex-direction: column;
+    }
 }
